# sync_article

./: .env.example  .gitignore  README.md  build-web.spec  pyproject.toml  requirements.txt  sync-ui-web.spec
cli/: main.py
core/: cleaner.py  fetcher.py  zendesk.py
syncapp/: bootstrap.py  main.py  settings.json
syncapp/backend/: sync_auto_run.py  sync_runner.py  sync_runnerv2.py
syncapp/config/: database.py  logfile.py  settings.py
syncapp/core/: cleaner.py  fetcher.py  sync.py  zendesk.py
syncapp/loggers/: log_cli.py  log_ui.py
syncapp/tests/: test_cleaner.py  test_fetcher.py
syncapp/utils/: crypto.py
syncapp/webui/: appv3.py  appv4.py  appv5.py
syncapp/webui/handlers/: cron_handler.py  delete_handler.py  edit_handler.py  sync_handler.py
syncapp/webui/pages/: addarticle.py  header.py  listarticle.py  log_viewer.py  settingspage.py
tests/: test_cleaner.py  test_fetcher.py  test_zendesk.py
utils/: logger.py
