[project]
name = "openziti-zendesk-importer"
version = "0.1.0"
description = "This project is started to build a autmation tool that enables sync between openziti and zendesk articles"
authors = [
    {name = "Girish Reddy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.33.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
